Update officer emails/locations Fix officer contact spacing

--- a/style/_components.scss
+++ b/style/_components.scss
@@ -94,6 +94,10 @@
 	main {
 		flex-grow: 1;
 	}
+
+	address p {
+		margin: 0;
+	}
 }
 
 .ddg-embed {
